feat: add sketch-based cave generator

--- a/autoRMmap/index.html
+++ b/autoRMmap/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.8c3f4.js" charset="utf-8"></script>
+<script src="src/settings.455d2.js" charset="utf-8"></script>
 
-<script src="main.10bc0.js" charset="utf-8"></script>
+<script src="main.b41af.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -76,9 +76,9 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.8a28d.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.a1a7e.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
-        loadScript(debug ? 'physics.js' : 'physics-min.e6810.js', window.boot);
+        loadScript(debug ? 'physics.js' : 'physics-min.ce5ee.js', window.boot);
       }
       else {
         window.boot();
