fix: 修改画布非矩形时草图绘制的画笔bug。

--- a/autoRMmap/index.html
+++ b/autoRMmap/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.455d2.js" charset="utf-8"></script>
+<script src="src/settings.a248c.js" charset="utf-8"></script>
 
-<script src="main.b41af.js" charset="utf-8"></script>
+<script src="main.fbc02.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
