feat: 增加LLM生成游戏地图。

--- a/autoRMmap/index.html
+++ b/autoRMmap/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.a248c.js" charset="utf-8"></script>
+<script src="src/settings.5b489.js" charset="utf-8"></script>
 
-<script src="main.fbc02.js" charset="utf-8"></script>
+<script src="main.24211.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
@@ -76,7 +76,7 @@
       document.body.appendChild(domScript);
     }
 
-    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.a1a7e.js', function () {
+    loadScript(debug ? 'cocos2d-js.js' : 'cocos2d-js-min.53427.js', function () {
       if (CC_PHYSICS_BUILTIN || CC_PHYSICS_CANNON) {
         loadScript(debug ? 'physics.js' : 'physics-min.ce5ee.js', window.boot);
       }
