更新了 RM 地图生成最新版。

--- a/autoRMmap/index.html
+++ b/autoRMmap/index.html
@@ -27,8 +27,8 @@
   <meta name="360-fullscreen" content="true"/>
   
   <!-- force screen orientation on some browser -->
-  <meta name="screen-orientation" content=""/>
-  <meta name="x5-orientation" content="">
+  <meta name="screen-orientation" content="landscape"/>
+  <meta name="x5-orientation" content="landscape">
 
   <!--fix fireball/issues/3568 -->
   <!--<meta name="browsermode" content="application">-->
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.5b489.js" charset="utf-8"></script>
+<script src="src/settings.f9b10.js" charset="utf-8"></script>
 
-<script src="main.24211.js" charset="utf-8"></script>
+<script src="main.f8ab5.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
